logs/dag_id=ETL_Flow/run_id=scheduled__2024-03-25T211100+0000/task_id=insert_data_from_files/attempt=5.log
[2024-03-30T10:08:36.545+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL_Flow.insert_data_from_files scheduled__2024-03-25T21:11:00+00:00 [queued]>
[2024-03-30T10:08:36.560+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL_Flow.insert_data_from_files scheduled__2024-03-25T21:11:00+00:00 [queued]>
[2024-03-30T10:08:36.561+0000] {taskinstance.py:2193} INFO - Starting attempt 5 of 10
[2024-03-30T10:08:36.580+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): insert_data_from_files> on 2024-03-25 21:11:00+00:00
[2024-03-30T10:08:36.586+0000] {standard_task_runner.py:60} INFO - Started process 14388 to run task
[2024-03-30T10:08:36.591+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'ETL_Flow', 'insert_data_from_files', 'scheduled__2024-03-25T21:11:00+00:00', '--job-id', '2367', '--raw', '--subdir', 'DAGS_FOLDER/ETL.py', '--cfg-path', '/tmp/tmp_c2unu_7']
[2024-03-30T10:08:36.595+0000] {standard_task_runner.py:88} INFO - Job 2367: Subtask insert_data_from_files
[2024-03-30T10:08:36.664+0000] {task_command.py:423} INFO - Running <TaskInstance: ETL_Flow.insert_data_from_files scheduled__2024-03-25T21:11:00+00:00 [running]> on host cb216a3a40e5
[2024-03-30T10:08:37.040+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='ETL_Flow' AIRFLOW_CTX_TASK_ID='insert_data_from_files' AIRFLOW_CTX_EXECUTION_DATE='2024-03-25T21:11:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-03-25T21:11:00+00:00'
[2024-03-30T10:08:37.310+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-30T10:08:37.326+0000] {sql.py:457} INFO - Running statement: CREATE TEMP TABLE temp_df AS SELECT * FROM %s LIMIT 0, parameters: ('MRR_Dim_Customers',)
[2024-03-30T10:08:37.333+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/data_insertion.py", line 39, in insert_data_from_files
    pg_hook.run(create_table_query, parameters=(table_name,))
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 460, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "'MRR_Dim_Customers'"
LINE 1: CREATE TEMP TABLE temp_df AS SELECT * FROM 'MRR_Dim_Customer...
                                                   ^

[2024-03-30T10:08:37.348+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL_Flow, task_id=insert_data_from_files, execution_date=20240325T211100, start_date=20240330T100836, end_date=20240330T100837
[2024-03-30T10:08:37.364+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 2367 for task insert_data_from_files (syntax error at or near "'MRR_Dim_Customers'"
LINE 1: CREATE TEMP TABLE temp_df AS SELECT * FROM 'MRR_Dim_Customer...
                                                   ^
; 14388)
[2024-03-30T10:08:37.408+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-30T10:08:37.422+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-03-30T10:08:37.451+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
